# rayTracer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  camera.h  circle.h  main.cpp  material.h  misc.h  object.h  objects.h  ppm_image.h  ray.cpp  ray.h  scene.h  vec3.h
